JavaScript File Connected

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </div>
                             </div>
                     </div>
-                    <!-- Player-2: Lional Messi-->
+                    <!-- Player 2 : Lionel Messi -->
                     <div class="col col-lg-4 col-sm-3 col-12">
                         <div class="card card-section" style="width: 18rem;">
                             <img src="images/Messi-01.png" class="card-img-top" alt="...">
