Player Section Added

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </section>
             
 
-            <!-- Player Selection -->
+            <!-- Player Section Added -->
             <section class="container mb-5">
                 <table class="table text-white">
                     <h2 class="text-center text-white text-head">Let's Make A List Of<br> Best Five Players:  <span id="select-player"></span></h2>
