Budget Section Added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </table>
             </section>
 
-            <!-- Budget Section -->
+           <!-- Budget Section Added -->
             <section class="container mb-5">
                 <h2 class="text-center text-white text-head">Selected Player</h2>
                 <label for="" class="d-block text-center ms-3 text-white">Per Player :
